Fix bugs in RequirementsCoverage